# MCP_AGENT_FRAMEWORK

./: README.md  Readme_youtube_origin.md  add_mcp_server.py  pydantic_mcp_agent.py  pyproject.toml  requirements.txt  test_crawl.py
agents/crawl4ai_tool/: web_crawler.py
agents/identity_info_tool/: __init__.py  identity.py
agents/joke_tool/: tell_joke.py
agents/open_interpreter_tool/: interpreter_runner.py
