[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.49.0",
    "anyio==4.9.0",
    "argcomplete==3.6.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "boto3==1.37.14",
    "botocore==1.37.14",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cohere==5.14.0",
    "colorama==0.4.6",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "eval-type-backport==0.2.2",
    "fastavro==1.10.0",
    "filelock==3.18.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.38.0",
    "griffe==1.6.0",
    "groq==0.19.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.29.3",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jmespath==1.0.1",
    "jsonpath-python==1.0.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "logfire-api==3.9.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mcp==1.5.0",
    "mdurl==0.1.2",
    "mistralai==1.5.1",
    "mypy-extensions==1.0.0",
    "narwhals==1.32.0",
    "numpy==2.2.4",
    "openai==1.66.3",
    "opentelemetry-api==1.31.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "prompt-toolkit==3.0.50",
    "protobuf==5.29.4",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-ai==0.0.41",
    "pydantic-ai-slim==0.0.41",
    "pydantic-core==2.27.2",
    "pydantic-graph==0.0.41",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "rsa==4.9",
    "s3transfer==0.11.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "streamlit==1.43.2",
    "tenacity==9.0.0",
    "tokenizers==0.21.1",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "types-requests==2.32.0.20250306",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]
